--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-plugin-transform-react-jsx": "^6.2.0",
-    "babel-preset-es2015": "6.1.18"
+    "babel-preset-es2015": "6.1.18",
+    "thunkify": "^2.1.2"
   },
   "scripts": {
     "babel": "babel --presets es2015 function --watch --out-dir dist",
